# sc-trace-debugger

./: .gitignore  CMakeLists.txt  README.md
include/: RISCV64_decode.hpp  RISCV64_model.hpp  debug_info_provider.hpp  executor.hpp  model.hpp  session.hpp  session_memory.hpp
src/: RISCV64_decode.cpp  RISCV64_model.cpp  debug_info_provider.cpp  executor.cpp  main.cpp  session_factory.cpp
tests/: RISCV64_decode_tests.cpp  RISCV64_model_tests.cpp
